--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "note-app",
-  "version": "1.0.0",
+  "name": "ai-generated-project",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "next": "15.2.0",
